@@ -79,6 +79,13 @@
         </select>
     [% END %]
 
+    [% WRAPPER setting title="PLUGIN_MATERIAL_SKIN_COMPILATION_ALBUMS" desc="PLUGIN_MATERIAL_SKIN_COMPILATION_ALBUMS_DESC" %]
+        <select class="stdedit" name="pref_compilationAll" id="compilationAll">
+            <option [% IF NOT prefs.compilationAll %]selected [% END %]value="0">[% 'NO' | getstring %]</option>
+            <option [% IF prefs.compilationAll %]selected [% END %]value="1">[% 'YES' | getstring %]</option>
+        </select>
+    [% END %]
+
     [% WRAPPER setting title="PLUGIN_MATERIAL_SKIN_COMMENT_AS_DISC_TITLE" desc="PLUGIN_MATERIAL_SKIN_COMMENT_AS_DISC_TITLE_DESC" %]
         <select class="stdedit" name="pref_commentAsDiscTitle" id="commentAsDiscTitle">
             [% FOREACH option = {
@@ -99,8 +106,8 @@
     [% END %]
 
 
-    [% WRAPPER settingGroup title="PLUGIN_MATERIAL_SKIN_PAGED_BATCH_SIZE" desc="PLUGIN_MATERIAL_SKIN_PAGED_BATCH_SIZE_DESC" %]
-    <input type="text" class="stdedit sliderInput_100_2000_1" name="pref_pagedBatchSize" id="pagedBatchSize" value="[% prefs.pagedBatchSize %]" size="5">
+    [% WRAPPER setting title="PLUGIN_MATERIAL_SKIN_PAGED_BATCH_SIZE" desc="PLUGIN_MATERIAL_SKIN_PAGED_BATCH_SIZE_DESC" %]
+        <input type="text" class="sliderInput_100_2000_1" name="pref_pagedBatchSize" id="pagedBatchSize" value="[% prefs.pagedBatchSize %]" size="5"></input>
     [% END %]
 
 [% PROCESS settings/footer.html %]
