@@ -24,6 +24,8 @@ x.y.z
 19. Slightly adjust grid metrics, to allow more columns when thin, etc.
 20. Simpler String.replaceAll polyfill.
 21. Remove notification support added for CORE32, no longer supported.
+22. Add (server side) option to show all compilation tracks when navigate into
+    a compilation from a contributing artist.
 
 3.5.5
 -----
